--- a/docs/影片設置說明.md
+++ b/docs/影片設置說明.md
@@ -10,7 +10,7 @@
 
 1. 將 `會動的熊精靈.gif` 檔案放在專案根目錄
    ```
-   C:\Users\user\Desktop\小熊哥捲土重來\
+   C:\Users\user\Desktop\小熊哥麵包坊\
    ├── index.html
    ├── login.html
    ├── game.html
@@ -24,7 +24,7 @@
 
 1. 使用 Python 啟動本地伺服器：
    ```bash
-   cd "C:\Users\user\Desktop\小熊哥捲土重來"
+   cd "C:\Users\user\Desktop\小熊哥麵包坊"
    python -m http.server 8000
    ```
 
