--- a/docs/虛擬玩家系統說明.md
+++ b/docs/虛擬玩家系統說明.md
@@ -8,7 +8,7 @@
 
 | 排名 | 名稱 | 頭像 | 性格類型 | 技能水平 |
 |------|------|------|----------|----------|
-| 1 | 蜂蜜大王 | 🐻 | 激進型 | 90% |
+| 1 | 麵包大王 | 🐻 | 激進型 | 90% |
 | 2 | 甜蛋女帝 | 🐻 | 均衡型 | 85% |
 | 3 | 道聽塗熊 | 🐻 | 保守型 | 75% |
 | 4 | 樂樂王子 | 🧙 | 激進型 | 80% |
@@ -22,7 +22,7 @@
 ### 激進型 (Aggressive)
 - **特點**: 偏好高風險高回報的選擇
 - **正確率**: 50% + (技能水平 × 40%)
-- **代表玩家**: 蜂蜜大王、樂樂王子
+- **代表玩家**: 麵包大王、樂樂王子
 
 ### 均衡型 (Balanced)
 - **特點**: 平衡風險和回報
@@ -41,12 +41,12 @@
 ```javascript
 {
     id: 'vp_xxxx',              // 唯一識別碼
-    name: '蜂蜜大王',           // 名稱
+    name: '麵包大王',           // 名稱
     avatar: '🐻',               // 頭像
     personality: 'aggressive',  // 性格類型
     skillLevel: 0.9,           // 技能水平 (0-1)
     resources: {
-        honey: 10000,          // 蜂蜜幣
+        honey: 10000,          // 麵包幣
         satisfaction: 100,     // 顧客滿意度
         reputation: 100        // 聲望
     },
@@ -85,7 +85,7 @@
 - 系統獲取真人玩家的資源
 - 合併虛擬玩家資料
 - 根據選擇的排行榜類型排序：
-  - 🍯 蜂蜜幣排行榜
+  - 🍯 麵包幣排行榜
   - 😊 顧客滿意度排行榜
   - 🏆 聲望排行榜
 - 顯示前 8 名（真人玩家標記為 👤）
@@ -107,9 +107,9 @@ showVirtualPlayers()
 ```
 === 🤖 虛擬玩家狀態 ===
 
-【1】 🐻 蜂蜜大王
+【1】 🐻 麵包大王
    性格: aggressive | 技能: 90%
-   💰 蜂蜜幣: 12,500
+   💰 麵包幣: 12,500
    😊 滿意度: 95%
    🏆 聲望: 150
    📊 進度: 輪次 1 | 完成 3 事件
@@ -117,7 +117,7 @@ showVirtualPlayers()
 
 【2】 🐻 甜蛋女帝
    性格: balanced | 技能: 85%
-   💰 蜂蜜幣: 11,800
+   💰 麵包幣: 11,800
    ...
 ```
 
