--- a/docs/項目結構說明.md
+++ b/docs/項目結構說明.md
@@ -3,7 +3,7 @@
 ## 📁 整理後的文件結構
 
 ```
-小熊哥捲土重來/
+小熊哥麵包坊/
 ├── 📄 index.html              # 載入頁面（自動跳轉）
 ├── 📄 login.html              # 登入/註冊頁面
 ├── 📄 game.html               # 遊戲主頁面
@@ -23,8 +23,8 @@
 │   │   ├── 🖼️ 登入背景.png      # 登入頁面背景
 │   │   ├── 🖼️ 中間框1.png        # 遊戲主視窗框架
 │   │   ├── 🖼️ 會動的熊精靈.gif    # 動態小熊角色
-│   │   ├── 🖼️ 蜂蜜幣.png         # 蜂蜜幣圖標
-│   │   ├── 🖼️ 蜂蜜幣計數器.png   # 蜂蜜幣計數器
+│   │   ├── 🖼️ 麵包幣.png         # 麵包幣圖標
+│   │   ├── 🖼️ 麵包幣計數器.png   # 麵包幣計數器
 │   │   ├── 🖼️ 聲望計數器.png     # 聲望計數器
 │   │   ├── 🖼️ 顧客滿意度計數器.png # 顧客滿意度計數器
 │   │   ├── 🖼️ 3個計數器.png      # 三個計數器組合
